# Flashcard-method

./: .env  .env.example  .gitignore  GermanLearning.db  Readme.md  WordsToPractice.db  credentials.json  google_sheet_con.py  main.py  pyproject.toml  sql_conn.py
german_learning.egg-info/: SOURCES.txt
src/: config.py  main.py
src/data/: sheetsInfo.json
src/database/: __init__.py  connection.py  db_process.py  db_validation.py  models.py  sql_queries.py
src/german_learning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/learning/: __init__.py  study.py
src/sheets/: __init__.py  google_sheets_connection.py
