[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "german-learning"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gspread",
    "google-auth",
    "python-dotenv",
]

[project.scripts]
german = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
